--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Lxinyuelxy Blog
+title: "Lxinyuelxy Blog"
 SEOTitle: Lxinyuelxy Blog
 header-img: img/post-bg-desk.jpg
 email: Lxinyuelxy@gmail.com
